# 3fd

./: .gitignore  3FD.sln  Acknowledgements.txt  CMakeLists.txt  Certificate creation procedure.txt  CertificateCreationProcedure.txt  CreateMsSqlSvcBrokerDB.sql  CreateMsSqlSvcBrokerDatabase.sql  Everything.pro  GenerateRpcTestCodeFromInterface.sh  LICENSE  LinuxPort.sln  MidlCompileRpcTestIDL.bat  README  SvcBrokerTest.bak  WsutilCompileWwsTestWsdl.bat  bootstrap.sh  build.ps1  build.sh  build_all.sh  compile_commands.json  configure.sh  install_dependencies.sh  install_vsrbdeps.sh  opencl-c-example-wrong.txt  setup.sh
3FD/: 3FD.WinRT.UWP.vcxproj  3FD.WinRT.UWP.vcxproj.filters  3FD.pro  3FD.vcxproj  3FD.vcxproj.filters  3fd-config-template.xml  CMakeLists.txt  LinuxPort.vcxproj  LinuxPort.vcxproj.filters  ReadMe.txt  base.h  broker.cpp  broker.h  broker_impl.cpp  broker_impl.h  broker_impl_reader.cpp  broker_impl_writer.cpp  callstacktracer.cpp  callstacktracer.h  cmdline.cpp  cmdline.h  config3fd-template.xml  configuration.cpp  configuration.h  cpp.hint  dependencies.cpp  dependencies.h  exceptions.cpp  exceptions.h  gc.h  gc_addresseshashtable.cpp  gc_addresseshashtable.h  gc_arrayofedges.cpp  gc_arrayofedges.h  gc_common.h  gc_garbagecollector.cpp  gc_mastertable.cpp  gc_mastertable.h  gc_memaddress.h  gc_memblock.cpp  (+99 more)
3FD/WWS_API/: web_impl.cpp  web_impl.h  wsdl-example.wsdl
3FD/snippets/: GetDistinguishedNameForComputer.txt  LdapSession.txt  RpcGetAuthorizationContextForClient.txt
3fd/broker/: 3fd-broker.vcxproj  3fd-broker.vcxproj.filters  CMakeLists.txt  broker.h  broker_impl.cpp  broker_impl.h  broker_impl_reader.cpp  broker_impl_writer.cpp
3fd/core/: 3fd-core-winrt.vcxproj  3fd-core-winrt.vcxproj.filters  3fd-core.vcxproj  3fd-core.vcxproj.filters  CMakeLists.txt  Makefile  callstacktracer.cpp  callstacktracer.h  configuration.cpp  configuration.h  dependencies.cpp  dependencies.h  exceptions.cpp  exceptions.h  gc.h  gc_addresseshashtable.cpp  gc_addresseshashtable.h  gc_arrayofedges.cpp  gc_common.h  gc_garbagecollector.cpp  gc_memorydigraph.cpp  gc_memorydigraph.h  gc_messages.cpp  gc_messages.h  gc_vertex.cpp  gc_vertex.h  gc_vertexstore.cpp  gc_vertexstore.h  logger.cpp  logger.h  logger_console.cpp  logger_dsa.cpp  logger_winrt.cpp  pch.h  preprocessing.h  runtime.cpp  runtime.h  sptr.h
3fd/opencl/: 3fd-opencl.vcxproj  3fd-opencl.vcxproj.filters  CMakeLists.txt  opencl.h  opencl_impl.cpp  opencl_impl.h  opencl_impl_commandtracker.cpp  opencl_impl_context.cpp  opencl_impl_device.cpp  opencl_impl_platform.cpp  opencl_impl_program.cpp  opencl_impl_programmanifest.cpp
3fd/opencl/CL/: cl.h  cl_d3d10.h  cl_d3d11.h  cl_dx9_media_sharing.h  cl_dx9_media_sharing_intel.h  cl_egl.h  cl_ext.h  cl_ext_intel.h  cl_gl.h  cl_gl_ext.h  cl_icd.h  cl_platform.h  cl_va_api_media_sharing_intel.h  opencl.h
3fd/utils/: 3fd-utils-winrt.vcxproj  3fd-utils-winrt.vcxproj.filters  3fd-utils.vcxproj  3fd-utils.vcxproj.filters  CMakeLists.txt  algorithms.h  asynchronous.cpp  cmdline.cpp  cmdline.h  concurrency.h  dynmempool.cpp  event.cpp  memorypool.cpp  pch.cpp  pch.h  serialization.cpp  serialization.h  sharedmutex.cpp  text.cpp  text.h  utils_asynchronous.cpp  utils_concurrency.h  utils_dynmempool.cpp  utils_event.cpp  utils_io.cpp  utils_io.h  utils_lockfreequeue.h  utils_memory.h  utils_memorypool.cpp  utils_sharedmutex.cpp  utils_string.cpp  utils_string.h  utils_winrt.cpp  utils_winrt.h  winrt.cpp  winrt.h  xml.cpp  xml.h
IntegrationTests/: AcmeTesting.idl  AcmeTesting_c.c  AcmeTesting_h.h  AcmeTesting_onc_svc.c  AcmeTesting_s.c  AcmeTesting_w32.h  AcmeTesting_w32_srv.c  AcmeTesting_x64.h  AcmeTesting_x64_srv.c  CMakeLists.txt  CreateMsSqlSvcBrokerDB.sql  IntegrationTests.cpp  IntegrationTests.pro  IntegrationTests.vcxproj  IntegrationTests.vcxproj.filters  LinuxPort.vcxproj  RestoreSvcBrokerDbForLinux1.sql  RestoreSvcBrokerDbForLinux2.sql  RestoreSvcBrokerDbForWin.sql  application.config  calculator.wsdl  calculator.wsdl.c  calculator.wsdl.h  install_manifest.txt  opencl-c-example.txt  resource.h  tests_broker.cpp  tests_core.cpp  tests_gc.cpp  tests_isam.cpp  tests_opencl.cpp  tests_rpc.cpp  tests_sqlite.cpp  tests_wws.cpp
IntegrationTests/UWP/: IntegrationTestsApp.vcxproj  IntegrationTestsApp.vcxproj.filters  IntegrationTestsApp_TemporaryKey.pfx  Package.appxmanifest
IntegrationTests/WinRT.UWP/: 0f748d13-8fa1-4fb5-9239-70aaa2312607.3fd.config  App.xaml.cpp  App.xaml.h  IntegrationTestsApp.WinRT.UWP.vcxproj  IntegrationTestsApp.WinRT.UWP.vcxproj.filters  IntegrationTestsApp.WinRT.UWP_TemporaryKey.pfx  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  pch.h
IntegrationTests/WinRT.UWP/Generated Files/: App.g.h  App.g.hpp  App.xaml  MainPage.g.h  MainPage.g.hpp  MainPage.xaml  XamlTypeInfo.Impl.g.cpp  XamlTypeInfo.g.cpp
UnitTests/: CMakeLists.txt  LinuxPort.vcxproj  UnitTests.cpp  UnitTests.pro  UnitTests.vcxproj  UnitTests.vcxproj.filters  _dummy.xml  application.config  deprecated.txt  install_manifest.txt  pch.h  tests_gc_arrayofedges.cpp  tests_gc_hashtable.cpp  tests_gc_memblock.cpp  tests_gc_memdigraph.cpp  tests_gc_vertex.cpp  tests_gc_vertexstore.cpp  tests_utils_algorithms.cpp  tests_utils_arrayofbits.cpp  tests_utils_cache.cpp  tests_utils_cmdline.cpp  tests_utils_io.cpp  tests_utils_lockfreequeue.cpp  tests_utils_pool.cpp  tests_utils_serialization.cpp  tests_utils_string.cpp  tests_utils_text.cpp  tests_xml.cpp
UnitTests/UWP/: Package.appxmanifest  UnitTestsApp.vcxproj  UnitTestsApp.vcxproj.filters  UnitTestsApp_TemporaryKey.pfx  a2e1e6a8-499e-45a2-b51c-c26d343dbae3.3fd.config
UnitTests/WinRT.UWP/: App.xaml.cpp  App.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  UnitTestsApp.WinRT.UWP.vcxproj  UnitTestsApp.WinRT.UWP.vcxproj.filters  UnitTestsApp.WinRT.UWP_TemporaryKey.pfx
UnitTests/WinRT.UWP/Generated Files/: App.g.h  (+8 more)
nanodbc/: CMakeLists.txt  nanodbc.vcxproj  nanodbc.vcxproj.filters
sqlite3/: CMakeLists.txt  sqlite3-winrt.vcxproj  sqlite3-winrt.vcxproj.filters  sqlite3.vcxproj  sqlite3.vcxproj.filters
(+317 files in other folders)
